--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <title></title>
   </head>
   <body>
-    <h1>Calculator</h1>
     <div class="container">
           <h1>Calculator</h1>
           <form id="add">
@@ -23,6 +22,46 @@
             </div>
             <button type="submit" class="btn">Add!</button>
           </form>
-        </div>    
+          <div id="output">
+         </div>
+         <form id="subtract">
+           <div class="form-group">
+             <label for="subtract1">1st number:</label>
+             <input id="subtract1" class="form-control" type="text">
+           </div>
+           <div class="form-group">
+             <label for="subtract2">2nd number:</label>
+             <input id="subtract2" class="form-control" type="text">
+           </div>
+           <button type="submit" class="btn">Subtract!</button>
+         </form>
+         <div id="output2">
+        </div>
+        <form id="multiply">
+          <div class="form-group">
+            <label for="multiply1">1st number:</label>
+            <input id="multiply1" class="form-control" type="text">
+          </div>
+          <div class="form-group">
+            <label for="multiply2">2nd number:</label>
+            <input id="multiply2" class="form-control" type="text">
+          </div>
+          <button type="submit" class="btn">Multiply!</button>
+        </form>
+        <div id="output3">
+       </div>
+       <form id="divide">
+         <div class="form-group">
+           <label for="divide1">1st number:</label>
+           <input id="divide1" class="form-control" type="text">
+         </div>
+         <div class="form-group">
+           <label for="divide2">2nd number:</label>
+           <input id="divide2" class="form-control" type="text">
+         </div>
+         <button type="submit" class="btn">Divide!</button>
+       </form>
+       <div id="output4">
+      </div>
   </body>
 </html>
