--- a/schedule.html
+++ b/schedule.html
@@ -30,39 +30,46 @@
           </div>
         </nav>
         <h1>Make an appointment</h1>
-        <form id="name">
-          <label for="name-input">Your Name:</label>
-          <input id="name-input" type="text">
-          <button type="submit" class="btn">Submit!</button>
+        <form>
+        <ul id="fieldList">
+          <li>
+            <input name="name[]" type="text" placeholder="Name" />
+          </li>
+          <li>
+            <input name="description[]" type="text" placeholder="Appointment Type" />
+          </li>
+          <li>
+            <input name="date[]" type="text" placeholder="Date">
+          </li>
+          <li>
+            <input name="startend[]" type="text" placeholder="Start/End">
+          </li>
+        </ul>
+        <br>
+        <br>
+        <input type="button" value="submit" data-toggle="modal" data-target="#exampleModal">
+      </form>
+    <!-- MODAL -->
 
-          </div>
-        </form>
-
-
-        <!-- MODAL -->
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-          Launch demo modal
-        </button>
-        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body">
-                <p>asfsdfsdfdsf</p>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-              </div>
+      <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Appointment Confirmation</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p>SUCCESS!!</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
             </div>
           </div>
         </div>
-
+      </div>
       </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
