--- a/schedule.html
+++ b/schedule.html
@@ -24,7 +24,7 @@
                 <a class="nav-link" href="schedule.html">Schedule</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="conversions.html">Conversions</a>
               </li>
             </ul>
           </div>
