--- a/conversions.html
+++ b/conversions.html
@@ -31,6 +31,15 @@
       </nav>
       <h1>Cooking Conversions</h1>
       <h1>Oz to Cups and Cups to Oz</h1>
+      <form id="ozcups">
+        <div class="form-group">
+          <label for="oz">Oz</label>
+          <input id="ozin" class="form-control" type="text">
+        </div>
+        <button type="submit" class="btn">Make cups!</button>
+      </form>
+      <div id="output">
+      </div>
 
 
     </div>
